fix(sample-xml): generate samples for large schemas within bounded memory
UBL 2.1, OASIS UCI, A-GRA, OGC KML and goAML ran out of memory while generating a sample XML. Heap
histograms and generator stacks showed four causes:

- Every XsdExtendedElement built its own flexmark Parser and HtmlRenderer, several kilobytes per
  XPath entry. One immutable, shared pair is enough.
- A schema node reachable under many XPaths was serialized again for each copy (goAML: 942 nodes,
  161,172 entries, 45 million characters of snippets). Snippets and documentation entries depend
  only on the node, so they are now built once per node and shared; the golden hashes in
  ProcessXsdSnippetEquivalenceTest were captured before the change and still match.
- Sample generation used the documentation's expansion of every global element. It now loads the
  schema once (loadSchema) and expands only the chosen root (expandForSample). In mandatory-only
  mode it skips optional particles (choice options stay), and it stops at
  fxt.sampleXml.maxExpandedNodes (1,000,000) or fxt.sampleXml.maxOutputChars (50,000,000) with an
  XML comment instead of an OutOfMemoryError. processXsd for the documentation is unchanged.
- Generex.random recurses without a depth bound; for A-GRA's .+Z it occasionally went tens of
  thousands of levels deep. BoundedPatternSampler replaces it: a random walk over the same automaton
  that only takes transitions from which an accepting state stays reachable within the remaining
  length, caps repetition bounds at 256 and emits only characters XML 1.0 allows. A first version
  picked from the whole Unicode range and made 935 UCI samples not well-formed; that is fixed and
  covered by BoundedPatternSamplerTest.

Full expansion heap after GC: goAML 730 -> 249 MB, FundsXML4 471 -> 189 MB, KML now completes.
First global element over the 31 evaluable corpus schemas: valid 23 -> 24 (plain, mandatory only),
schemas without any XML 4 -> 1. UCI, A-GRA and KML generate all their root